# ctypes-contract-sample

./: bindgen.ml  bindings.ml  cbuf_gen_sample.ml  dune  sample.ml  sample_generated.ml
c/: sample.c  sample.h
cbuf/: cbuf.ml  cbuf.mli
