(executable
 (name sample)
 (libraries generated ctypes)
 (modules sample))

(library
 (name bindings)
 (libraries ctypes)
 (modules bindings))

(executable
 (name bindgen)
 (libraries ctypes ctypes.stubs bindings)
 (modules bindgen))

(library
 (name generated)
 (libraries ctypes.stubs bindings)
 (modules sample_generated)
 (foreign_stubs
  (language c)
  (names sample sample_stubs)))
