(include_subdirs unqualified)

(library
 (name bindings)
 (libraries ctypes)
 (modules bindings))

(executable
 (name bindgen)
 (libraries ctypes ctypes.stubs bindings cbuf)
 (modules bindgen))

(executable
 (name sample)
 (libraries generated ctypes)
 (modules sample))

(library
 (name generated)
 (libraries ctypes.stubs bindings)
 (modules cstubs_gen)
 (foreign_stubs
  (language c)
  (names sample cstubs_gen)))

(rule
  (targets cstubs_gen.c cstubs_gen.ml cbuf_gen.ml)
  (action
    (run ./bindgen.exe)))

(library
 (name cbuf)
 (libraries ctypes)
 (modules cbuf))
