(include_subdirs unqualified)

(library
 (name bindings)
 (libraries ctypes cbuf)
 (modules bindings))

(executable
 (name bindgen)
 (libraries ctypes ctypes.stubs bindings cbuf)
 (modules bindgen))

(executable
 (name sample)
 (libraries generated ctypes cbuf_gen)
 (modules sample))

(library
 (name generated)
 (libraries ctypes.stubs bindings)
 (modules cstubs_gen)
 (foreign_stubs
  (language c)
  (names sample cstubs_gen)))

(rule
  (targets cstubs_gen.c cstubs_gen.ml cbuf_gen.ml)
  (action
    (run ./bindgen.exe)))

(library
 (name cbuf)
 (libraries ctypes)
 (modules cbuf))

(library
 (name cbuf_gen)
 (libraries ctypes generated)
 (modules cbuf_gen))

(library
  (name cbuf_gen_sample)
  (libraries ctypes generated)
  (modules cbuf_gen_sample))
